--- a/your_nutritionist/frontend/src/Components/Recipe/RecipeShow/RecipeShow.scss
+++ b/your_nutritionist/frontend/src/Components/Recipe/RecipeShow/RecipeShow.scss
@@ -102,6 +102,9 @@ button.edit-btn {
 		box-shadow: none !important;
 		border: 0 !important;
 		padding-bottom: 2rem;
+		width: 100vw;
+		margin: 1rem 0;
+		padding: 0.5rem;
 	}
 }
 .edit-btn-wrapper {
